<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_flowers_data"
        android:textColor="#0f0"
        android:textSize="11pt" />

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flower_name" />

            <EditText
                android:id="@+id/etFlowerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flower_category" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/speak" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnShowFlowers"
        android:onClick="onClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="characters"
        android:text="@string/show_all_flowers"
        android:textColor="#0f0"
        android:textSize="12pt" />
</LinearLayout>